# telegram-affiliates

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  spec.md
code/: danticmodels.py  main.py  mygram.py  view.py  views_helpers.py
code/db/: compose.yml  fake_data.py  init_db.py
docs/: index.md
tests/: conftest.py  test_mygram.py  test_routes.py  tests_mygram.py
