[tool.poetry]
name = "robo-telegram-affiliates"
version = "0.1.0"
description = ""
authors = ["davies <davies.araujo@fazobetai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"
python-dotenv = "^1.0.0"
pymysql = "^1.1.0"
sqlalchemy = "^2.0.23"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
ipython = "^8.17.2"
httpx = "^0.25.1"
trio = "^0.23.1"
pytest-asyncio = "^0.21.1"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.4.8"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.3"

[tool.pytest.ini_options]
pythonpath = [".", "code"]
# rodar testes comentados
# addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

